--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <h2 id="heading">DOM Manipulation Exercises</h3>
     <h4>Task 2 a</h4>
     <div id="task2a"></div>
+    <button id="textBtn2a">Add Hello World</button>
 
     <h4>Task 2 b</h4>
+    <button onclick ="changeBGcolor(event)">Red</button>
+    <button onclick ="changeBGcolor(event)">Green</button>
 
 
     <h4>Task 2 c</h4>
-
+     <button onclick ="redirectToGoole(event)">Goole</button>
 
     <!-- ***** -->
     <h3>With jQuery</h3>
     <h4>Task 4 a</h4>
     <div id="task4a"></div>
+    
 
     <h4>Task 4 b</h4>
 
@@ -27,6 +31,7 @@
 
 
     <!-- Insert your JavaScript file -->
+    <script  src="script.js"></script>
 
   </body>
 </html>
